--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,8 @@
                 <eui-toolbar-item-user-profile>
                     <eui-user-profile-menu>
                         <eui-user-profile-menu-item>
-                            <eui-icon iconClass="eui-icon-person-thin"></eui-icon> {{ 'eui.my-profile-informations' | translate }}
+                            <eui-icon iconClass="eui-icon-person-thin"></eui-icon> {{ 'eui.my-profile-informations' |
+                            translate }}
                         </eui-user-profile-menu-item>
                         <eui-user-profile-menu-item>
                             <eui-icon iconClass="eui-icon-logout-thin"></eui-icon> {{ 'eui.sign-out' | translate }}
@@ -16,7 +17,8 @@
                     </eui-user-profile-menu>
                 </eui-toolbar-item-user-profile>
                 <eui-toolbar-item-notifications>
-                    <eui-notifications [count]="notificationItems?.length" [items]="notificationItems"></eui-notifications>
+                    <eui-notifications [count]="notificationItems?.length" [items]="notificationItems">
+                    </eui-notifications>
                 </eui-toolbar-item-notifications>
             </eui-toolbar-items>
         </eui-toolbar>
